# rl_bot

./: pyproject.toml
rl_bot/: logger.py  main.py  params.py
rl_bot/agents/: random_games.py
rl_bot/environments/: trading_env.py
rl_bot/visualization/: visualization.py
